Simplify program composition API